--- a/metadata/summary.html
+++ b/metadata/summary.html
@@ -1,2 +1,5 @@
-<p>TODO<p>
+<p><em>Mei jolted awake, panting heavily. His body felt cold. Gradually, as the distinction between dream and reality reasserted itself, he began to calm down. A few feet beside him, Gabu slept soundly.</em></p>
+<p><em>Snowflakes fell outside. It was almost completely dark, but Mei could just make out the thin dusting of snow that already coated the grass of the meadow. The first snow of the year; Midwinter had officially started.</em></p>
+<br />
+<p>Six months after the end of <a href="https://archiveofourown.org/works/49292806" rel="noopener">"Bokura No Atarashī Seikatsu"</a>, Gabu and Mei's new life together continues. But issues of love, loss, isolation and identity continue to threaten the happiness of the Emerald Forest's residents. "If you can survive until Midwinter," the saying goes, "you can survive until spring." But that isn't entirely true. You also have to survive Midwinter.</p>
 <!--<a href="https://visitorbadge.io/status?path=oira2%2Fbokura"><img src="https://api.visitorbadge.io/api/visitors?path=oira2%2Fbokura&label=Refresh%20to%20make%20the%20number%20go%20up!&countColor=%23263759&style=plastic" /></a>-->
